--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 
 body {
     background-color: rgb(241, 247, 255);
-    max-width:1400px;
+    max-width:1600px;
+    margin:auto;
 }
 
 html {
@@ -92,6 +93,7 @@ html {
     top: 0;
     background-color: rgb(78, 46, 192);
     z-index: 10;
+    max-width:1600px;
 }
 
 .navbar {
