--- a/style.css
+++ b/style.css
@@ -753,5 +753,10 @@ footer img{
     }
 }
 
+@media only screen and (min-width:1600px) {
+    .landpage {
+        justify-content:space-between;
+    }
+}
 
 
