--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ html {
     font-size: 1rem;
 }
 .landpage img{
+    position:absolute;
     right: 1rem;
     opacity: 1;
     z-index: 2;
@@ -755,6 +756,9 @@ footer img{
 @media only screen and (min-width:1600px) {
     .landpage {
         justify-content:space-between;
+    }
+    .landpage img{
+        position:unset;
     }
 }
 
